--- a/html/index.html
+++ b/html/index.html
@@ -18,12 +18,12 @@
 
         <nav class="nav">
           <ul>
-            <li class="active"><a>Главная</a></li>
-            <li><a>Для бизнеса</a></li>
-            <li><a>Для частных клиентов</a></li>
-            <li><a>О компании</a></li>
-            <li><a>Портфолио</a></li>
-            <li><a>Контакты</a></li>
+            <li class="active"><a href="">Главная</a></li>
+            <li><a href="">Для бизнеса</a></li>
+            <li><a href="">Для частных клиентов</a></li>
+            <li><a href="">О компании</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
           </ul>
         </nav>
 
