--- a/html/for-bissnes.html
+++ b/html/for-bissnes.html
@@ -82,88 +82,86 @@
           </div>
         </div>
         <div class="wrap-fluid slider-mid mid-row">
-          <div class="wrap">
-            <div class="slider-wrap">
-              <div class="slider variable">
-                <div class="slider_item">
-                  <div class="slider_item_tittle">
-                    <span>02</span>
-                    <h1>Вентиляция</h1>
-                  </div>
-                  <div class="slider_item_content">
-                    <p>
-                      Система вентиляции — это совокупность устройств для
-                      обработки, транспортирования, подачи и удаления воздуха.
-                    </p>
-                    <a href=""
-                      ><span>Подробнее</span
-                      ><img src="../img/button.png" alt="картинка" />
-                    </a>
-                  </div>
+          <div class="slider-wrap">
+            <div class="slider variable">
+              <div>
+                <div class="slider_item_tittle">
+                  <span>02</span>
+                  <h1>Вентиляция</h1>
                 </div>
-                <div class="slider_item">
-                  <div class="slider_item_tittle">
-                    <span>02</span>
-                    <h1>Вентиляция</h1>
-                  </div>
-                  <div class="slider_item_content">
-                    <p>
-                      Система вентиляции — это совокупность устройств для
-                      обработки, транспортирования, подачи и удаления воздуха.
-                    </p>
-                    <a href=""
-                      ><span>Подробнее</span
-                      ><img src="../img/button.png" alt="картинка" />
-                    </a>
-                  </div>
+                <div class="slider_item_content">
+                  <p>
+                    Система вентиляции — это совокупность устройств для
+                    обработки, транспортирования, подачи и удаления воздуха.
+                  </p>
+                  <a href=""
+                    ><span>Подробнее</span
+                    ><img src="../img/button.png" alt="картинка" />
+                  </a>
                 </div>
-                <div class="slider_item">
-                  <div class="slider_item_tittle">
-                    <span>02</span>
-                    <h1>Вентиляция</h1>
-                  </div>
-                  <div class="slider_item_content">
-                    <p>
-                      Система вентиляции — это совокупность устройств для
-                      обработки, транспортирования, подачи и удаления воздуха.
-                    </p>
-                    <a href=""
-                      ><span>Подробнее</span
-                      ><img src="../img/button.png" alt="картинка" />
-                    </a>
-                  </div>
+              </div>
+              <div>
+                <div class="slider_item_tittle">
+                  <span>02</span>
+                  <h1>Вентиляция</h1>
                 </div>
-                <div class="slider_item">
-                  <div class="slider_item_tittle">
-                    <span>02</span>
-                    <h1>Вентиляция</h1>
-                  </div>
-                  <div class="slider_item_content">
-                    <p>
-                      Система вентиляции — это совокупность устройств для
-                      обработки, транспортирования, подачи и удаления воздуха.
-                    </p>
-                    <a href=""
-                      ><span>Подробнее</span
-                      ><img src="../img/button.png" alt="картинка" />
-                    </a>
-                  </div>
+                <div class="slider_item_content">
+                  <p>
+                    Система вентиляции — это совокупность устройств для
+                    обработки, транспортирования, подачи и удаления воздуха.
+                  </p>
+                  <a href=""
+                    ><span>Подробнее</span
+                    ><img src="../img/button.png" alt="картинка" />
+                  </a>
                 </div>
-                <div class="slider_item">
-                  <div class="slider_item_tittle">
-                    <span>02</span>
-                    <h1>Вентиляция</h1>
-                  </div>
-                  <div class="slider_item_content">
-                    <p>
-                      Система вентиляции — это совокупность устройств для
-                      обработки, транспортирования, подачи и удаления воздуха.
-                    </p>
-                    <a href=""
-                      ><span>Подробнее</span
-                      ><img src="../img/button.png" alt="картинка" />
-                    </a>
-                  </div>
+              </div>
+              <div>
+                <div class="slider_item_tittle">
+                  <span>02</span>
+                  <h1>Вентиляция</h1>
+                </div>
+                <div class="slider_item_content">
+                  <p>
+                    Система вентиляции — это совокупность устройств для
+                    обработки, транспортирования, подачи и удаления воздуха.
+                  </p>
+                  <a href=""
+                    ><span>Подробнее</span
+                    ><img src="../img/button.png" alt="картинка" />
+                  </a>
+                </div>
+              </div>
+              <div>
+                <div class="slider_item_tittle">
+                  <span>02</span>
+                  <h1>Вентиляция</h1>
+                </div>
+                <div class="slider_item_content">
+                  <p>
+                    Система вентиляции — это совокупность устройств для
+                    обработки, транспортирования, подачи и удаления воздуха.
+                  </p>
+                  <a href=""
+                    ><span>Подробнее</span
+                    ><img src="../img/button.png" alt="картинка" />
+                  </a>
+                </div>
+              </div>
+              <div>
+                <div class="slider_item_tittle">
+                  <span>02</span>
+                  <h1>Вентиляция</h1>
+                </div>
+                <div class="slider_item_content">
+                  <p>
+                    Система вентиляции — это совокупность устройств для
+                    обработки, транспортирования, подачи и удаления воздуха.
+                  </p>
+                  <a href=""
+                    ><span>Подробнее</span
+                    ><img src="../img/button.png" alt="картинка" />
+                  </a>
                 </div>
               </div>
             </div>
