--- a/html/for-bissnes.html
+++ b/html/for-bissnes.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
+
     <link rel="stylesheet" type="text/css" href="../css/for-bissnes.css" />
+    <link rel="stylesheet" type="text/css" href="../css/main.css" />
   </head>
   <body>
     <div class="main">
-      <header class="header">
+      <header class="header" id="menu">
         <div class="logo">
           <a href="">
             <img src="../img/logo.png" />
@@ -61,6 +62,7 @@
           </div>
         </div>
       </header>
+
       <div class="slider-section">
         <div class="wrap-fluid top-row slider-top">
           <div class="wrap">
@@ -82,9 +84,26 @@
           </div>
         </div>
         <div class="wrap-fluid slider-mid mid-row">
-          <div class="slider-wrap">
+          <div class="slider-wrap wrap">
+            <div class="slider-fon"></div>
             <div class="slider variable">
-              <div>
+              <div class="slider_item">
+                <div class="slider_item_tittle">
+                  <span>01</span>
+                  <h1>Вентиляция</h1>
+                </div>
+                <div class="slider_item_content">
+                  <p>
+                    Система вентиляции — это совокупность устройств для
+                    обработки, транспортирования, подачи и удаления воздуха.
+                  </p>
+                  <a href=""
+                    ><span>Подробнее</span
+                    ><img src="../img/button.png" alt="картинка" />
+                  </a>
+                </div>
+              </div>
+              <div class="slider_item">
                 <div class="slider_item_tittle">
                   <span>02</span>
                   <h1>Вентиляция</h1>
@@ -100,9 +119,9 @@
                   </a>
                 </div>
               </div>
-              <div>
+              <div class="slider_item">
                 <div class="slider_item_tittle">
-                  <span>02</span>
+                  <span>03</span>
                   <h1>Вентиляция</h1>
                 </div>
                 <div class="slider_item_content">
@@ -116,42 +135,10 @@
                   </a>
                 </div>
               </div>
-              <div>
+              <div class="slider_item">
                 <div class="slider_item_tittle">
-                  <span>02</span>
-                  <h1>Вентиляция</h1>
-                </div>
-                <div class="slider_item_content">
-                  <p>
-                    Система вентиляции — это совокупность устройств для
-                    обработки, транспортирования, подачи и удаления воздуха.
-                  </p>
-                  <a href=""
-                    ><span>Подробнее</span
-                    ><img src="../img/button.png" alt="картинка" />
-                  </a>
-                </div>
-              </div>
-              <div>
-                <div class="slider_item_tittle">
-                  <span>02</span>
-                  <h1>Вентиляция</h1>
-                </div>
-                <div class="slider_item_content">
-                  <p>
-                    Система вентиляции — это совокупность устройств для
-                    обработки, транспортирования, подачи и удаления воздуха.
-                  </p>
-                  <a href=""
-                    ><span>Подробнее</span
-                    ><img src="../img/button.png" alt="картинка" />
-                  </a>
-                </div>
-              </div>
-              <div>
-                <div class="slider_item_tittle">
-                  <span>02</span>
-                  <h1>Вентиляция</h1>
+                  <span>04</span>
+                  <h1>Отопление</h1>
                 </div>
                 <div class="slider_item_content">
                   <p>
