--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
             </div>
           </div>
         </header>
-      <div>
+    <div class="fullpage-wrap">
     <div class="" id="fullpage">
         
       
