--- a/html/for-bissnes — копия.html
+++ b/html/for-bissnes — копия.html
@@ -63,7 +63,7 @@
         </div>
       </header>
 
-      <div class="slider-section for-bissnes">
+      <div class="slider-section">
         <div class="wrap-fluid top-row slider-top">
           <div class="wrap">
             <div class="item50 item"></div>
