--- a/html/for-client — копия.html
+++ b/html/for-client — копия.html
@@ -62,7 +62,7 @@
         </div>
       </header>
 
-      <div class="slider-section for-bissnes">
+      <div class="slider-section for-client">
         <div class="wrap-fluid top-row slider-top">
           <div class="wrap">
             <div class="item50 item"></div>
@@ -75,7 +75,7 @@
               <div class="breadcrum">
                 <ul>
                   <li><a href="">Главная</a></li>
-                  <li class="last-child">Для бизнеса</li>
+                  <li class="last-child">Для частных клиентов</li>
                 </ul>
               </div>
             </div>
@@ -89,7 +89,7 @@
               <div class="slider_item">
                 <div class="slider_item_tittle">
                   <span>01</span>
-                  <h1>кондиционирование</h1>
+                  <h1>Квартиры</h1>
                 </div>
                 <div class="slider_item_content">
                   <p>
@@ -105,7 +105,7 @@
               <div class="slider_item">
                 <div class="slider_item_tittle">
                   <span>02</span>
-                  <h1>Вентиляция</h1>
+                  <h1>Отопление</h1>
                 </div>
                 <div class="slider_item_content">
                   <p>
@@ -121,23 +121,7 @@
               <div class="slider_item">
                 <div class="slider_item_tittle">
                   <span>03</span>
-                  <h1>Вентиляция</h1>
-                </div>
-                <div class="slider_item_content">
-                  <p>
-                    Система вентиляции — это совокупность устройств для
-                    обработки, транспортирования, подачи и удаления воздуха.
-                  </p>
-                  <a href=""
-                    ><span>Подробнее</span
-                    ><img src="../img/button.png" alt="картинка" />
-                  </a>
-                </div>
-              </div>
-              <div class="slider_item">
-                <div class="slider_item_tittle">
-                  <span>04</span>
-                  <h1>Отопление</h1>
+                  <h1>Дома</h1>
                 </div>
                 <div class="slider_item_content">
                   <p>
