--- a/html/for-bissnes.html
+++ b/html/for-bissnes.html
@@ -62,7 +62,23 @@
         </div>
       </header>
 
-      <div class="slider-section for-bissnes">
+      <div class="slider-section">
+        <div class="slider-fon-wrap">
+          <div class="slider-fon lazy">
+            <div class="slider-fon-item">
+              <img src="../img/for-client-fon1.png" />
+            </div>
+            <div class="slider-fon-item">
+              <img src="../img/for-bissnes-fon1.png" />
+            </div>
+            <div class="slider-fon-item">
+              <img src="../img/for-client-fon1.png" />
+            </div>
+            <div class="slider-fon-item">
+              <img src="../img/for-bissnes-fon1.png" />
+            </div>
+          </div>
+        </div>
         <div class="wrap-fluid top-row slider-top">
           <div class="wrap">
             <div class="item50 item"></div>
