--- a/html/for-client-service.html
+++ b/html/for-client-service.html
@@ -64,8 +64,8 @@
       <div class="text-page">
         <div class="wrap-fluid page-top">
           <div class="wrap">
-            <div class="item25 item"></div>
-            <div class="item75 item">
+            <div class="item30 item"></div>
+            <div class="item70 item">
               <div class="breadcrum">
                 <ul>
                   <li><a href="">Главная</a></li>
@@ -78,21 +78,21 @@
         </div>
         <div class="wrap-fluid page-mid">
           <div class="wrap ">
-            <div class="item25">
+            <div class="item30">
               <div class="left-menu">
                 <div class="left-menu-top">
                   <ul>
-                    <li><a href="">Загородные дома</a></li>
+                    <li><a href="">Загородные дома Отопление</a></li>
                     <li class="active"><a href="">Квартиры</a></li>
                     <li><a href="">Отопление</a></li>
                   </ul>
                 </div>
-                <div class="left-menu-bot">
-                  <a href="">Заказать консультацию</a>
+                <div class="left-menu-bot scroll-to-form">
+                  <a>Заказать консультацию</a>
                 </div>
               </div>
             </div>
-            <div class="item75">
+            <div class="item70">
               <div class="right-content">
                 <div class="text-title">
                   <h1>Кондиционирование квартир</h1>
@@ -292,40 +292,120 @@
                   </p>
                 </div>
                 <div class="text-wrap">
-                    <h2>«Лучшие» и «Хорошие» кондиционеры</h2>
-                    <p>
-                        И так Вы определились с типом внутреннего блока для своего помещения, 
-                        а также подобрали кондиционер по мощности, теперь необходимо выбрать 
-                        марку кондиционера, на данном этапе есть, что посмотреть и из чего выбрать. 
-                    </p>
-                    <p>
-                        И так Вы определились с типом внутреннего блока для своего помещения, 
-                        а также подобрали кондиционер по мощности, теперь необходимо выбрать 
-                        марку кондиционера, на данном этапе есть, что посмотреть и из чего выбрать. 
-                    </p>
-                    <p>
-                        Для практичных покупателей создаётся оборудование Business-класса 
-                        – Panasonic (Япония) - идеально подходит для создания микроклимата 
-                        в квартирах, офисах. Многие модели имеют довольно оригинальный дизайн 
-                        внутренних блоков, обладают хорошим соотношением цена / качество 
-                        и имеют достаточно высокую надежность.
-                    </p>
-                    <p>
-                        Покупка дорогой техники оправдана в определенных случаях. Чаще же 
-                        необходимо просто охладить или нагреть воздух. С этими задачами 
-                        с успехом справляются кондиционеры Эконом-класса - LG (Ю. Корея), 
-                        Samsung (Ю. Корея) - кондиционеры, удовлетворяющие главную потребность 
-                        клиента — поддержание температуры воздуха в помещении в летний период.
-                    </p>
-                  </div>
+                  <h2>«Лучшие» и «Хорошие» кондиционеры</h2>
+                  <p>
+                    И так Вы определились с типом внутреннего блока для своего
+                    помещения, а также подобрали кондиционер по мощности, теперь
+                    необходимо выбрать марку кондиционера, на данном этапе есть,
+                    что посмотреть и из чего выбрать.
+                  </p>
+                  <p>
+                    И так Вы определились с типом внутреннего блока для своего
+                    помещения, а также подобрали кондиционер по мощности, теперь
+                    необходимо выбрать марку кондиционера, на данном этапе есть,
+                    что посмотреть и из чего выбрать.
+                  </p>
+                  <p>
+                    Для практичных покупателей создаётся оборудование
+                    Business-класса – Panasonic (Япония) - идеально подходит для
+                    создания микроклимата в квартирах, офисах. Многие модели
+                    имеют довольно оригинальный дизайн внутренних блоков,
+                    обладают хорошим соотношением цена / качество и имеют
+                    достаточно высокую надежность.
+                  </p>
+                  <p>
+                    Покупка дорогой техники оправдана в определенных случаях.
+                    Чаще же необходимо просто охладить или нагреть воздух. С
+                    этими задачами с успехом справляются кондиционеры
+                    Эконом-класса - LG (Ю. Корея), Samsung (Ю. Корея) -
+                    кондиционеры, удовлетворяющие главную потребность клиента —
+                    поддержание температуры воздуха в помещении в летний период.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="wrap-fluid page-bot">
+          <div class="wrap">
+            <div class="work_obj">
+              <div class="work_obj_title">Наши объекты</div>
+              <div class="work_obj_wrap">
+                <a href="" class="work_obj_item">
+                  <img src="../img/work1.png" />
+                  <div class="work_obj_item_sub">
+                    <span>Офис с девятью 
+                        комнатами общей 
+                        площадью 320 м2</span>
+                    <div href="" class="button-arrow">
+                      <span>Смотреть</span>
+                      <div class="arrow-img">
+                        <div></div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                <a href="" class="work_obj_item">
+                    <img src="../img/work2.png" />
+                    <div class="work_obj_item_sub">
+                      <span>Кафе в Москве 
+                          площадью 150 м2</span>
+                      <div href="" class="button-arrow">
+                        <span>Смотреть</span>
+                        <div class="arrow-img">
+                          <div></div>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                  <a href="" class="work_obj_item">
+                      <img src="../img/work3.png" />
+                      <div class="work_obj_item_sub">
+                        <span>Магазин 
+                            хозяйственных 
+                            товаров в центре 
+                            Москвы</span>
+                        <div href="" class="button-arrow">
+                          <span>Смотреть</span>
+                          <div class="arrow-img">
+                            <div></div>
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+              </div>
+              <a href="" class="work_obj_more button-arrow ">
+                  <span>Больше работ</span>
+                  <div class="arrow-img">
+                    <div></div>
+                  </div>
+                </a>
+            </div>
+          </div>
+        </div>
+        <div class="wrap-fluid page-bottom-form">
+          <div class="wrap">
+              <form id="contact-form">
+                  <h1>
+                    Подбираете кондиционер?<br>
+                    Закажите консультацию!
+                  </h1>
+                  <div class="input-wrap">
+                    <input type="text" placeholder="Ваше имя">
+                    <input type="text" placeholder="Ваш телефон">
+                  </div>
+                  <div class="button-wrap">
+                    <button type="submite">Заказать консультацию</button>
+                    <p>
+                        Нажимая на кнопку, вы соглашаетесь на
+                        обработку ваших персональных данных.
+                    </p>
+                  </div>
+                </form>
+          </div>
+        </div>
       </div>
-      <div class="page-bot">
-
-      </div>
+      
       <footer class="footer">
         <div class="wrap">
           <div class="footer_copi">
