--- a/html/index.html
+++ b/html/index.html
@@ -87,7 +87,7 @@
                   пространство для работы и жизни наших клиентов, делая его
                   комфортнее и безопаснее.
                 </div>
-                <div class="button button-arrow scroll-to-form myLinkModal">
+                <div class="button button-arrow myLinkModal">
                   <span>Заказать консультацию</span
                   ><div class="arrow-img">
                     <div></div>
