--- a/html/for-client-service.html
+++ b/html/for-client-service.html
@@ -102,7 +102,7 @@
                     кондиционер какого типа нужен для вашей квартиры.
                   </p>
                 </div>
-                <div class="text-img"><img src="../img/img1.png" /></div>
+                <div class="text-wrap"><img src="../img/img1.png" /></div>
                 <div class="text-wrap">
                   <p>
                     Улицы города летом – это раскаленные каменные джунгли,
@@ -172,7 +172,7 @@
                     воздушного потока и многое другое.
                   </p>
                 </div>
-                <div class="text-img"><img src="../img/img2.png" /></div>
+                <div class="text-wrap"><img src="../img/img2.png" /></div>
                 <div class="text-wrap">
                   <p>
                     В последнее время идет активная борьба производителей
@@ -221,7 +221,7 @@
                     задавать свою температуру в каждом из охлаждаемых помещений.
                   </p>
                 </div>
-                <div class="text-img"><img src="../img/img3.png" /></div>
+                <div class="text-wrap"><img src="../img/img3.png" /></div>
                 <div class="text-wrap">
                   <p>
                     Как же быть, если есть необходимость использовать
