--- a/html/for-bissnes.html
+++ b/html/for-bissnes.html
@@ -63,19 +63,21 @@
       </header>
 
       <div class="slider-section">
+        <div class="slider-black-fon"></div>
         <div class="slider-fon-wrap">
+         
           <div class="slider-fon lazy">
             <div class="slider-fon-item">
-              <img src="../img/for-client-fon1.png" />
+              <img src="../img/sec2-fon.png" />
             </div>
             <div class="slider-fon-item">
-              <img src="../img/for-bissnes-fon1.png" />
+              <img src="../img/sec3-fon.png" />
             </div>
             <div class="slider-fon-item">
-              <img src="../img/for-client-fon1.png" />
+              <img src="../img/sec5-fon.png" />
             </div>
             <div class="slider-fon-item">
-              <img src="../img/for-bissnes-fon1.png" />
+              <img src="../img/sec4-fon.png" />
             </div>
           </div>
         </div>
