--- a/html/for-client-service.html
+++ b/html/for-client-service.html
@@ -82,7 +82,7 @@
               <div class="left-menu">
                 <div class="left-menu-top">
                   <ul>
-                    <li><a href="">Загородные дома Отопление</a></li>
+                    <li><a href="">Загородные дома</a></li>
                     <li class="active"><a href="">Квартиры</a></li>
                     <li><a href="">Отопление</a></li>
                   </ul>
@@ -334,9 +334,7 @@
                 <a href="" class="work_obj_item">
                   <img src="../img/work1.png" />
                   <div class="work_obj_item_sub">
-                    <span>Офис с девятью 
-                        комнатами общей 
-                        площадью 320 м2</span>
+                    <span>Офис с девятью комнатами общей площадью 320 м2</span>
                     <div href="" class="button-arrow">
                       <span>Смотреть</span>
                       <div class="arrow-img">
@@ -346,66 +344,62 @@
                   </div>
                 </a>
                 <a href="" class="work_obj_item">
-                    <img src="../img/work2.png" />
-                    <div class="work_obj_item_sub">
-                      <span>Кафе в Москве 
-                          площадью 150 м2</span>
-                      <div href="" class="button-arrow">
-                        <span>Смотреть</span>
-                        <div class="arrow-img">
-                          <div></div>
-                        </div>
+                  <img src="../img/work2.png" />
+                  <div class="work_obj_item_sub">
+                    <span>Кафе в Москве площадью 150 м2</span>
+                    <div href="" class="button-arrow">
+                      <span>Смотреть</span>
+                      <div class="arrow-img">
+                        <div></div>
                       </div>
                     </div>
-                  </a>
-                  <a href="" class="work_obj_item">
-                      <img src="../img/work3.png" />
-                      <div class="work_obj_item_sub">
-                        <span>Магазин 
-                            хозяйственных 
-                            товаров в центре 
-                            Москвы</span>
-                        <div href="" class="button-arrow">
-                          <span>Смотреть</span>
-                          <div class="arrow-img">
-                            <div></div>
-                          </div>
-                        </div>
-                      </div>
-                    </a>
-              </div>
-              <a href="" class="work_obj_more button-arrow ">
-                  <span>Больше работ</span>
-                  <div class="arrow-img">
-                    <div></div>
                   </div>
                 </a>
+                <a href="" class="work_obj_item">
+                  <img src="../img/work3.png" />
+                  <div class="work_obj_item_sub">
+                    <span>Магазин хозяйственных товаров в центре Москвы</span>
+                    <div href="" class="button-arrow">
+                      <span>Смотреть</span>
+                      <div class="arrow-img">
+                        <div></div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <a href="" class="work_obj_more button-arrow ">
+                <span>Больше работ</span>
+                <div class="arrow-img">
+                  <div></div>
+                </div>
+              </a>
             </div>
           </div>
         </div>
         <div class="wrap-fluid page-bottom-form">
           <div class="wrap">
-              <form id="contact-form">
-                  <h1>
-                    Подбираете кондиционер?<br>
-                    Закажите консультацию!
-                  </h1>
-                  <div class="input-wrap">
-                    <input type="text" placeholder="Ваше имя">
-                    <input type="text" placeholder="Ваш телефон">
-                  </div>
-                  <div class="button-wrap">
-                    <button type="submite">Заказать консультацию</button>
-                    <p>
-                        Нажимая на кнопку, вы соглашаетесь на
-                        обработку ваших персональных данных.
-                    </p>
-                  </div>
-                </form>
+            <form id="contact-form">
+              <h1>
+                Подбираете кондиционер?<br />
+                Закажите консультацию!
+              </h1>
+              <div class="input-wrap">
+                <input type="text" placeholder="Ваше имя" />
+                <input type="text" placeholder="Ваш телефон" />
+              </div>
+              <div class="button-wrap">
+                <button type="submite">Заказать консультацию</button>
+                <p>
+                  Нажимая на кнопку, вы соглашаетесь на обработку ваших
+                  персональных данных.
+                </p>
+              </div>
+            </form>
           </div>
         </div>
       </div>
-      
+
       <footer class="footer">
         <div class="wrap">
           <div class="footer_copi">
