--- a/html/for-client.html
+++ b/html/for-client.html
@@ -63,7 +63,7 @@
       </header>
 
       <div class="slider-section">
-        
+        <div class="slider-black-fon"></div>
         <div class="wrap-fluid top-row slider-top">
           <div class="wrap">
             <div class="item50 item"></div>
@@ -84,21 +84,21 @@
           </div>
         </div>
         <div class="slider-fon-wrap">
-            <div class="slider-fon lazy">
-              <div class="slider-fon-item">
-                <img src="../img/for-client-fon1.png" />
-              </div>
-              <div class="slider-fon-item">
-                <img src="../img/for-bissnes-fon1.png" />
-              </div>
-              <div class="slider-fon-item">
-                <img src="../img/for-client-fon1.png" />
-              </div>
-              <div class="slider-fon-item">
-                <img src="../img/for-bissnes-fon1.png" />
-              </div>
+          <div class="slider-fon lazy">
+            <div class="slider-fon-item">
+              <img src="../img/sec2-fon.png" />
+            </div>
+            <div class="slider-fon-item">
+              <img src="../img/sec3-fon.png" />
+            </div>
+            <div class="slider-fon-item">
+              <img src="../img/sec5-fon.png" />
+            </div>
+            <div class="slider-fon-item">
+              <img src="../img/sec4-fon.png" />
             </div>
           </div>
+        </div>
         <div class="wrap-fluid slider-mid mid-row">
           <div class="slider-wrap wrap">
             <div class="slider-fon"></div>
