--- a/html/about-company.html
+++ b/html/about-company.html
@@ -149,12 +149,30 @@
                     <p>и многие другие компании...    </p>
                     <h2>План развития компании</h2>
                 </div>
+                <div class="mission-block">
+                    <div class="mission-item">
+                        <div class="mission-title">Задача №1</div>
+                        <div class="mission-text">Создания собственных стандартов обслуживания и эксплуатации инженерных сетей.</div>
+                    </div>
+                    <div class="mission-item">
+                        <div class="mission-title">Задача №2</div>
+                        <div class="mission-text">Усиление присутствия компании в Москве и Московской области.</div>
+                    </div>
+                    <div class="mission-item">
+                        <div class="mission-title">Задача №3</div>
+                        <div class="mission-text">Увеличение портфеля постоянных клиентов.</div>
+                    </div>
+                    <div class="mission-item">
+                        <div class="mission-title">Задача №4</div>
+                        <div class="mission-text">Создание собственного диспетчерского пункта для обслуживания постоянных клиентов. </div>
+                    </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-
+      
       <footer class="footer">
         <div class="wrap">
           <div class="footer_copi">
