--- a/html/carera.html
+++ b/html/carera.html
@@ -148,7 +148,7 @@
                             <li>Контроль исполнения приказов, распоряжений, 
                                     поручений в установленные сроки;</li>
                         </ul>
-                        <button>Подать заявку</button>
+                        <button class="myLinkModal">Подать заявку</button>
                       </div>
                     </li>
                     <li class="accordeon__item">
@@ -171,7 +171,7 @@
                                 <li>Контроль исполнения приказов, распоряжений, 
                                         поручений в установленные сроки;</li>
                             </ul>
-                            <button>Подать заявку</button>
+                            <button class="myLinkModal">Подать заявку</button>
                         </div>
                     </li>
                     <li class="accordeon__item">
@@ -194,7 +194,7 @@
                                 <li>Контроль исполнения приказов, распоряжений, 
                                         поручений в установленные сроки;</li>
                             </ul>
-                            <button>Подать заявку</button>
+                            <button class="myLinkModal">Подать заявку</button>
                         </div>
                     </li>
                     <li class="accordeon__item">
@@ -217,7 +217,7 @@
                                 <li>Контроль исполнения приказов, распоряжений, 
                                         поручений в установленные сроки;</li>
                             </ul>
-                            <button>Подать заявку</button>
+                            <button class="myLinkModal">Подать заявку</button>
                         </div>
                     </li>
                     </ul>
@@ -229,6 +229,27 @@
           </div>
         </div>
       </div>
+      <!--Модалка-->
+      <div id="myModal">
+          <div class="contact-form">
+            <form>
+              <div class="title">Оставьте заявку
+                  на консультацию
+                  специалиста</div>
+            
+              <div class="form-input"><input type="text" placeholder="Имя"></div>
+              <div class="form-input"><input type="text" placeholder="Телефон"></div>
+              <button>Заказать консультацию</button>
+              <p>Нажимая на кнопку, вы соглашаетесь на
+                  обработку ваших персональных данных.</p>
+            </form>
+          </div>
+          <span id="myModal__close" class="close">
+            <div></div>
+            <div></div>
+          </span>
+        </div>
+        <div id="myOverlay"></div>
 
       <footer class="footer">
         <div class="wrap">
