--- a/html/carera.html
+++ b/html/carera.html
@@ -240,6 +240,7 @@
               <div class="form-input"><input type="text" placeholder="Имя"></div>
               <div class="form-input"><input type="text" placeholder="Телефон"></div>
               <button>Заказать консультацию</button>
+              <div class="sucsess">Ваша заявка принята</div>
               <p>Нажимая на кнопку, вы соглашаетесь на
                   обработку ваших персональных данных.</p>
             </form>
