--- a/html/portfolio-detail.html
+++ b/html/portfolio-detail.html
@@ -114,14 +114,19 @@
               </div>
             </div>
             <div class="portfolio_media">
-                <div class="thumb-wrap">
-                    <iframe
+                <div class="thumb-wrap" id="player">
+                    <div  id="video-cover"></div>
+                    <iframe 
                     width="100%"
                     height="466"
-                    src="https://www.youtube.com/embed/xFa2_PVMeDQ"
+                    src="https://www.youtube.com/embed/xFa2_PVMeDQ?enablejsapi=1"
                     frameborder="0"
+                    allow="autoplay; encrypted-media"
                     allowfullscreen
                     ></iframe>
+                    <button id="play" class="play-btn">
+                            <img src="../img/play.png">
+                        </button>
                 </div>
               <div class="portfolio_media-item">
                
