--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -187,6 +187,14 @@
                 </div>
               </a>
             </div>
+            <div class="btn-more-news">
+              <a href="">
+                  <span>Показать больше</span>
+                <div class="arrow-img">
+                  <div></div>
+                </div>
+            </a>
+            </div>
           </div>
           </div>
         </div>
